# Script

./: .gitignore  Cargo.toml  LICENSE  README.md  test.te
monitor/: network.json  package-lock.json  package.json  server.js  start.sh
monitor/webdir/: graphProcess.js  index.html  sketch.js  webSoc.js
src/: default_fn.rs  function.rs  function_kind.rs  instruction.rs  instruction_fn.rs  iterator.rs  iterator_kind.rs  kind.rs  loop_kind.rs  main.rs  operation.rs  process.rs  process_line.rs  table.rs  tup_kind.rs  tuple.rs  variable.rs  vec_free.rs  vec_table.rs
test/: abc.te  test.py  test.te
