[package]
name = "script"
version = "0.1.0"
authors = ["Antoine32 <57961983+Antoine32@users.noreply.github.com>"]
edition = "2018"

[features]
print = []
pause = []
time = []
memory = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
sysinfo = "0.15.9"
websocket = "0.26.2"

[target.'cfg(target_family = "unix")'.dependencies]
termion = "1.5.6"
