[package]
name = "script"
version = "0.1.0"
authors = ["Antoine32 <57961983+Antoine32@users.noreply.github.com>"]
edition = "2018"

[features]
print = []
pause = []
time = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
sysinfo = "0.16.0"
websocket = "0.26.2"
json = "0.12.4"
rand = "0.8.3"


[target.'cfg(target_family = "unix")'.dependencies]
termion = "1.5.6"
